errors_tcp_ascii.txt
    Checking pulse_stdlib v0.1.0 (C:\Users\Kuntal\Documents\Pulse\pulse_lang\pulse_stdlib)
warning: unused import: `std::thread`
 --> pulse_stdlib\src\utils.rs:6:5
  |
6 | use std::thread;
  |     ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> pulse_stdlib\src\networking.rs:149:13
    |
149 |         let mut socket_ref = &*socket;
    |             ----^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0596]: cannot borrow `*socket_ref` as mutable, as it is behind a `&` reference
   --> pulse_stdlib\src\networking.rs:150:15
    |
150 |         match socket_ref.write_all(data.as_bytes()).await {
    |               ^^^^^^^^^^ `socket_ref` is a `&` reference, so it cannot be borrowed as mutable
    |
help: consider changing this to be a mutable reference
    |
149 |         let mut socket_ref = &mut *socket;
    |                               +++

warning: variable does not need to be mutable
   --> pulse_stdlib\src\networking.rs:185:13
    |
185 |         let mut socket_ref = &*socket;
    |             ----^^^^^^^^^^
    |             |
    |             help: remove this `mut`

error[E0596]: cannot borrow `*socket_ref` as mutable, as it is behind a `&` reference
   --> pulse_stdlib\src\networking.rs:187:15
    |
187 |         match socket_ref.read(&mut buf).await {
    |               ^^^^^^^^^^ `socket_ref` is a `&` reference, so it cannot be borrowed as mutable
    |
help: consider changing this to be a mutable reference
    |
185 |         let mut socket_ref = &mut *socket;
    |                               +++

warning: unused variable: `regex`
  --> pulse_stdlib\src\regex.rs:32:12
   |
32 |         Ok(regex) => {
   |            ^^^^^ help: if this is intentional, prefix it with an underscore: `_regex`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0596`.
warning: `pulse_stdlib` (lib) generated 4 warnings
error: could not compile `pulse_stdlib` (lib) due to 2 previous errors; 4 warnings emitted
